--- a/Projeto/src/app/app.component.scss
+++ b/Projeto/src/app/app.component.scss
@@ -1,5 +1,4 @@
 .div-centralizador {
-    display: flex;
     align-items: center;
     width: 100vw;
     justify-content: center;
@@ -11,10 +10,14 @@
     width: 70vw;
 }
 
-.div-cards{
+.div-cards-conteudo{
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0.2rem 0.2rem 0.2rem #000000;
     background-image: linear-gradient(#1C1C1C 15%, #4F4F4F 99%);
     margin-bottom: 3rem;
+}
+
+.bggradient{
+    background-image: linear-gradient(#20E9B9 15%, #4F4F4F 99%);
 }
