Ajustando css de alguns componentes

--- a/Projeto/src/app/Componentes/cards-component/cards.component.html
+++ b/Projeto/src/app/Componentes/cards-component/cards.component.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
+<div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
     <div class="col">
       <div class="card h-100">
         <img src="assets/doeagra.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em dinheiro que puder">
@@ -8,7 +8,7 @@
         </div>
         <div class="card-footer">
           <div class="info-footer">
-            <label>Nos ajude a superar o mês anterior!</label>
+            <label>Ajude a superar o mês anterior!</label>
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -26,7 +26,7 @@
         </div>
         <div class="card-footer">
           <div class="info-footer">
-            <label>Nos ajude a superar o mês anterior!</label>
+            <label>Ajude a superar o mês anterior!</label>
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 33%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -44,7 +44,7 @@
         </div>
         <div class="card-footer">
           <div class="info-footer">
-            <label>Nos ajude a superar o mês anterior!</label>
+            <label>Ajude a superar o mês anterior!</label>
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
