--- a/Projeto/src/app/Componentes/contatos-component/contatos-component.component.html
+++ b/Projeto/src/app/Componentes/contatos-component/contatos-component.component.html
@@ -1,3 +1,10 @@
-<div class="container">
-    <fa-icon [icon]="faCoffee"></fa-icon>
+<div class="d-flex container divcontatos justify-content-center gap-3 mb-2">
+    <img src="assets/instagram.png" class="img-fluid" alt="Instagram">
+    <img src="assets/twitter.png" class="img-fluid" alt="Instagram">
+    <img src="assets/facebook.png" class="img-fluid" alt="Instagram">
+    <img src="assets/whatsapp.png" class="img-fluid" alt="Instagram">
+    <img src="assets/linkedin.png" class="img-fluid" alt="Instagram">
+</div>
+<div class="d-flex justify-content-center div-figuras">
+    <p>Nos siga nas redes sociais ou entre em contato para tirar dúvidas.</p>
 </div>
