--- a/Projeto/src/app/app.component.html
+++ b/Projeto/src/app/app.component.html
@@ -12,15 +12,17 @@
   <div class="container">
     <ul class="nav nav-pills mb-1">
       <li class="nav-item">
-        <a [routerLink]="['/Colaboradores']" class="nav-link active" aria-current="page">Colaboradores</a>
+        <a routerLink='/Colaboradores' class="nav-link active"
+          aria-current="page">Colaboradores</a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['/Estabelecimentos']" class="nav-link">Estabelecimentos</a>
+        <a routerLink='/Estabelecimentos' class="nav-link">Estabelecimentos</a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['/Necessitados']" class="nav-link">Necessitados</a>
+        <a routerLink='/Necessitados' class="nav-link">Necessitados</a>
       </li>
     </ul>
+    <router-outlet name="outlet2"></router-outlet>
   </div>
 </div>
 <app-footer-component></app-footer-component>
