--- a/projeto-angular/src/app/app.component.html
+++ b/projeto-angular/src/app/app.component.html
@@ -10,18 +10,7 @@
 </div>
 <div class="bggradient p-4">
   <div class="container">
-    <ul class="nav nav-pills mb-1">
-      <li class="nav-item">
-        <a routerLink='/Colaboradores' class="nav-link active"
-          aria-current="page">Colaboradores</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink='/Estabelecimentos' class="nav-link">Estabelecimentos</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink='/Necessitados' class="nav-link">Necessitados</a>
-      </li>
-    </ul>
+    <app-tab-component></app-tab-component>
     <router-outlet name="outlet2"></router-outlet>
   </div>
 </div>
