Atualizando models, repositorys e controllers

--- a/projeto-angular/src/app/Componentes/header-component/header-component.component.html
+++ b/projeto-angular/src/app/Componentes/header-component/header-component.component.html
@@ -31,6 +31,16 @@
                 <li><a routerLink="/CadastroEstabelecimento" class="dropdown-item" href="#">Cadastro Estabelecimento</a></li>
               </ul>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Listas
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                <li><a routerLink="/Estabelecimentos" class="dropdown-item" href="#">Estabelecimentos</a></li>
+                <li><a routerLink="/Colaboradores" class="dropdown-item" href="#">Colaboradores</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
