--- a/projeto-angular/src/app/Componentes/cards-component/cards.component.html
+++ b/projeto-angular/src/app/Componentes/cards-component/cards.component.html
@@ -4,7 +4,7 @@
         <img src="assets/doeagra.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em dinheiro que puder">
         <div class="card-body">
           <h5 class="card-title">Campanha Pix Solidário</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">A Campanha de Solidariedade esta aceitando doações para ajudar aqueles que estão em situações de vulnerabilidade. Você pode fazer a diferença! Doe para o Fundo Social e ajude quem mais precisa!</p>
         </div>
         <div class="card-footer">
           <div class="info-footer">
@@ -12,7 +12,7 @@
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <button type="button" class="btn btn-info">Doe Agora</button>
+            <button type="button" class="btn btn-info"><a routerLink="/DoeAgora">Doe Agora</a></button>
           </div>
         </div>
       </div>
@@ -22,7 +22,7 @@
         <img src="assets/doealimentos.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em alimentos que puder">
         <div class="card-body">
           <h5 class="card-title">Campanha Fome Zero</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">O Programa Fome Zero foi criado para combater a fome e as suas causas estruturais, que geram a exclusão social e para garantir a segurança alimentar dos brasileiros em três frentes.</p>
         </div>
         <div class="card-footer">
           <div class="info-footer">
@@ -30,7 +30,7 @@
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 33%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <button type="button" class="btn btn-info">Doe Agora</button>
+            <button type="button" class="btn btn-info"><a routerLink="/DoeAgora">Doe Agora</a></button>
           </div>
         </div>
       </div>
@@ -40,7 +40,7 @@
         <img src="assets/doeroupas.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em peças de roupa que puder">
         <div class="card-body">
           <h5 class="card-title">Campanha do Agasalho</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text">A Campanha do Agasalho é uma iniciativa do Fundo Social de Solidariedade para ajudar pessoas em situação de vulnerabilidade social ou em situação de rua a enfrentar o período de inverno.</p>
         </div>
         <div class="card-footer">
           <div class="info-footer">
@@ -48,7 +48,7 @@
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <button type="button" class="btn btn-info">Doe Agora</button>
+            <button type="button" class="btn btn-info"><a routerLink="/DoeAgora">Doe Agora</a></button>
           </div>
         </div>
       </div>
